# Graphica

./: CMakeLists.txt  README.md  air_bubble.ppm  change_angle_of_camera.ppm  checker2.ppm  checking_camera.ppm  cornell_box.ppm  cornell_smoke.ppm  defocus.ppm  dielectric.ppm  diffuse.ppm  earth.ppm  final_scene.ppm  final_scene2.ppm  final_scene3.ppm  final_scene4.ppm  hollow_glass.ppm  hollow_glass_1.ppm  hollow_glass_2.ppm  light.ppm  main.cpp  main.h  notes.txt  perlin.ppm  pyramid.txt  run.txt  total_internal_reflection.ppm
Header_Files/: ThreadPool.h  axis_aligned_bounding_box.h  bs_thread_pool.h  bs_thread_pool_utils.h  bvh.h  camera.h  color.h  constants.h  ctpl.h  entity.h  entity_list.h  interval.h  material.h  math.h  multithreaded_camera_Code  onb.h  pdf.h  perlin.h  pyramid.h  quadrilateral.h  ray.h  rtw_image.h  single threaded camera code  single_threaded_camera_code  sphere.h  stb_image.h  texture.h  thread_pool.h  triangular_prism.h  vec3.h  volumes.h
Main_Classes/: main.cpp
